--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-awscli
+awscli==1.6.2
 beautifulsoup4==4.3.2
-devpi-client
-Fabric==1.8.3
-GitPython==0.3.2.RC1
-hgapi==1.7.1
+devpi-client==2.0.3
+Fabric==1.10.0
+GitPython==0.3.2
+hgapi==1.7.2
 ipdb==0.8
 IPy==0.81
-paramiko==1.12.3
-psycopg2==2.5.1
-pytest-flakes
-pytest-pep8
-pytest==2.5.2
-PyYAML==3.10
-selenium==2.39.0
+paramiko==1.15.1
+psycopg2==2.5.4
+pytest-flakes==0.2
+pytest-pep8==1.0.6
+pytest==2.6.4
+PyYAML==3.11
+selenium==2.44.0
 walkdir==0.3
