--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,7 @@ pytest-flakes==0.2
 pytest-pep8==1.0.6
 pytest==2.6.4
 PyYAML==3.11
+requests==2.4.3
 selenium==2.44.0
 walkdir==0.3
+xmltodict==0.9.1
