Update requirements update requests to fix issue with sslv3 and remove ipdb as issues with python 2.7

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ devpi-client==2.0.3
 Fabric==1.10.0
 GitPython==0.3.2
 hgapi==1.7.2
-ipdb==0.8
+# ipdb requires ipython - raises an error backports.shutil-get-terminal-size; python_version == "2.7"
+# ipdb==0.8
 IPy==0.81
 paramiko==1.15.1
 psycopg2==2.5.4
@@ -12,7 +13,7 @@ pytest-flakes==0.2
 pytest-pep8==1.0.6
 pytest==2.6.4
 PyYAML==3.11
-requests==2.4.3
+requests==2.6.0
 selenium==2.44.0
 walkdir==0.3
 xmltodict==0.9.1
