--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-awscli==1.6.2
-beautifulsoup4==4.3.2
-devpi-client==2.0.3
+# awscli
+beautifulsoup4
+devpi-client
 Fabric==1.12.0
-GitPython==0.3.2
-hgapi==1.7.2
-# ipdb requires ipython - raises an error backports.shutil-get-terminal-size; python_version == "2.7"
-paramiko==1.15.1
-psycopg2==2.5.4
-pytest-flakes==0.2
-pytest-pep8==1.0.6
-pytest==2.6.4
-PyYAML==3.11
-requests==2.6.0
-selenium==2.44.0
-walkdir==0.3
-xmltodict==0.9.1
+GitPython
+hgapi
+paramiko
+psycopg2
+pytest
+pytest-flakes
+pytest-pep8
+PyYAML
+requests
+selenium
+walkdir
+xmltodict
